z-index fixed

--- a/css/alert.css
+++ b/css/alert.css
@@ -4,7 +4,7 @@
   color: white;
   position: absolute;
   width: 100%;
-  z-index: 1;
+  z-index: 4;
   font-size: 1em;
 }
 
